--- a/rtg/src/components/GameCardScoreEditor.scss
+++ b/rtg/src/components/GameCardScoreEditor.scss
@@ -1,6 +1,6 @@
 @import '../sass/colors.scss';
 
-.GameCardBet {
+.GameCardScoreEditor {
   padding: 0 3px;
   width: 100%;
   font-family: 'Oswald', sans-serif;
