--- a/rtg/src/sass/_colors.scss
+++ b/rtg/src/sass/_colors.scss
@@ -24,5 +24,5 @@ $pantoneCherryBlossom: #F4CFE0;
 $pantoneAshRose: #B27F7F;
 $pantoneTcxHarborMist: #AFB1B4;
 
-$ribbonBet: darken($pantoneAshRose, 20%);
+$ribbonScore: darken($pantoneAshRose, 20%);
 $ribbonNeutral: darken($pantoneTcxHarborMist, 5%);
