Improve visualization of unsaved bets
When a bet has changes which need to be saved, display
the goals in yellow, otherwise in white.

--- a/rtg/src/sass/_colors.scss
+++ b/rtg/src/sass/_colors.scss
@@ -12,6 +12,8 @@ $lightGold: #E9C467;
 $success: #58ce38;
 $error: #ce3838;
 
+$betInput: $white;
+$betInputEditing: hsl(51, 100%, 47%);
 $betResultNiete: hsl(18, 85%, 40%);
 $betResultTendenz: hsl(45, 85%, 40%);
 $betResultRemisTendenz: hsl(45, 85%, 40%);
